--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ minecraft {
 
             args '--uuid', 'f6065061-7e65-413e-bc75-accf6c09ce0a'
 
-            args '-Dgeckolib.disable_examples=true'
+            property 'geckolib.disable_examples', 'true'
 
         }
 
@@ -91,7 +91,7 @@ minecraft {
                 }
             }
 
-            args '-Dgeckolib.disable_examples=true'
+            property 'geckolib.disable_examples', 'true'
 
         }
 
@@ -113,7 +113,7 @@ minecraft {
                 }
             }
 
-            args '-Dgeckolib.disable_examples=true'
+            property 'geckolib.disable_examples', 'true'
 
         }
 
